...

const List<Meal> kMeals = [
  Meal('Breakfast', 'Oats with Protein Shake', 450, 'assets/images/meal1.png'),
  Meal('Lunch', 'Grilled Chicken with Quinoa', 650, 'assets/images/meal2.png'),
  Meal('Evening Snack', 'Greek Yogurt with Nuts', 200,
      'assets/images/meal3.png'),
  Meal('Dinner', 'Salmon with Steamed Veggies', 650, 'assets/images/meal4.png'),
];

class Macro {
  final String name;
  final int current;
  final int goal;
...
